<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentrootlogin"
    android:background="@drawable/anim_bg_list"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/parent1"
        android:layout_marginBottom="@dimen/objek_jarak"
        android:fontFamily="@font/billabong"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/appname_size" />

    <LinearLayout
        android:id="@+id/parent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/jarak_parent_login"
        android:paddingRight="@dimen/jarak_parent_login">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/objek_jarak"
            android:textColorHint="@color/bg_txt_login"
            app:boxBackgroundColor="@color/bg_box_login"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtemaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/objek_jarak"
            android:textColorHint="@color/bg_txt_login"
            app:boxBackgroundColor="@color/bg_box_login"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/bg_txt_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtpasslogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnlogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/objek_jarak"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/bg_txt_login"
            android:textSize="15sp"
            app:backgroundTint="@color/transparent"
            app:cornerRadius="2dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/txthelplogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/help_signin"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtregisterlogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_register"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_box_login"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/register_help"
        android:textColor="@android:color/white" />

</RelativeLayout>